<resources>
    <string name="app_name">TestSteps</string>

    <string name="start">START PEDOMETER</string>
    <string name="stop">STOP PEDOMETER</string>
    <string name="pause">PAUSE PEDOMETER</string>
    <string name="resume">RESUME PEDOMETER</string>
    <string name="walk_0">Walking: 0</string>
    <string name="run_0">Run: 0</string>
    <string name="km_0">0.000 km</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sex">Sex:</string>
    <string name="cm">cm</string>
    <string name="height">Height</string>
    <string name="save">Save</string>
    <string name="setting">Setting</string>
</resources>
